@@ -69,8 +69,8 @@ static const int32 ns9_order = 9;
 static int32 ns9_histposl, ns9_histposr;
 static int32 ns9_ehl[18] = {0};
 static int32 ns9_ehr[18] = {0};
-static int32 ns9_ehl[18];
-static int32 ns9_ehr[18];
+//static int32 ns9_ehl[18];
+//static int32 ns9_ehr[18];
 static uint32 ns9_r1l, ns9_r2l, ns9_r1r, ns9_r2r;
 static const float ns9_coef[9] = {
 	2.412f, -3.370f, 3.937f, -4.174f, 3.353f,
