@@ -1,3 +1,8 @@
+2006-12-20  Keishi Suenaga <skeishi@yahoo.co.jp>
+
+	* timidity/midi_a.c: windows compilers support.
+	* timidity/effect.c: remove duplicate definitions.
+
 2006-12-18  Keishi Suenaga <skeishi@yahoo.co.jp>
 
 	* timidity/midi_a.c:  u_int8_t  must be uint8_t.
